Bug 374226 - Panel auto hide setting is not saved into look and feel package
Summary: Panel auto hide setting is not saved into look and feel package
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-27 21:21 UTC by Lucas
Modified: 2016-12-29 13:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas 2016-12-27 21:21:46 UTC
Panel auto hide setting is not saved into look and feel package

Steps to Reproduce:
1. Create a new look and feel package using Plasma lf explorer, lets call it test.
2. Change panel settings to auto hide
3. Save the changes using option "Layout from current plasma setup"
4. Open system settings> look and feel, check "use desktop layout from theme" and switch to a new lf "test"package. 
5. Panel auto hide option is not respected.
Comment 1 Marco Martin 2016-12-29 11:24:13 UTC
perhaps the automatic export from the explorer app doesn't work (and this would be a problem of the automatic export process)

but i'm pretty sure the setting itself works, if visibility mode is set correctly from javascript (so the file prodiced by the export mechanism is manually tweaked)
Comment 2 Marco Martin 2016-12-29 13:43:28 UTC
Git commit 28f30459dca17bdb412bbdbfbd1bce916bc60c6a by Marco Martin.
Committed on 29/12/2016 at 13:43.
Pushed by mart into branch 'master'.

import/export panel visibility with js

Summary:
Both when exporting and importing plasma layout to json
consider the panel visibility as well together the other
properties

Test Plan: tried an exported layout with autohide panel

Reviewers: davidedmundson, #plasma

Reviewed By: davidedmundson, #plasma

Subscribers: davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3852

M  +1    -0    shell/scripting/scriptengine_v1.cpp
M  +15   -0    shell/shellcorona.cpp

https://commits.kde.org/plasma-workspace/28f30459dca17bdb412bbdbfbd1bce916bc60c6a